--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="pi-short-info">
                     <h3>Prof. Chao Li</h3>
                     <p class="pi-info-line">Professor</p>
-                    <p class="pi-info-line" style="font-weight: normal;">University of Cambridge, UK</p>
+                    <p class="pi-info-line" style="font-weight: normal;">Cambridge University, UK</p>
                     <div class="pi-links">
                         <a href="mailto:clxxx@cam.ac.uk">Email</a> | <a href="#">Scholar</a> | <a href="#">Twitter/X</a>
                     </div>
