--- a/page_demo/index.html
+++ b/page_demo/index.html
@@ -142,7 +142,7 @@
                 </li>
 
                 <li class="paper-item">
-                    <img src="doc/demo/p/paper1.png" alt="Preview" class="paper-preview-img">
+                    <img src="doc/demo/p/paper2.png" alt="Preview" class="paper-preview-img">
                     <div class="paper-content">
                         <span class="paper-title">Advanced Digital Twin Model for SBRT Response Analysis</span>
                         <span class="paper-author">Valentin Septiers</span>
@@ -160,7 +160,7 @@
             <h2>Under Review</h2>
             <ul class="paper-list">
                 <li class="paper-item">
-                    <img src="doc/demo/p/paper1.png" alt="Preview" class="paper-preview-img">
+                    <img src="doc/demo/ur/paper1.png" alt="Preview" class="paper-preview-img">
                     <div class="paper-content">
                         <span class="paper-title">FMIC-AI: Annotation-Free Tumor Cell Detection in Fluorescence Microscopy</span>
                         <span class="paper-author">Yinglan Kuang</span>
