--- a/page_tissue/index.html
+++ b/page_tissue/index.html
@@ -247,19 +247,18 @@
             <h2>Under Review / Preprint</h2>
             <ul class="paper-list">
                 <li class="paper-item">
-                    <img src="doc/page_tissue/ur/placeholder.png" alt="Preview" class="paper-preview-img">
+                    <img src="doc/page_tissue/ur/paper00.png" alt="Preview" class="paper-preview-img">
                     <div class="paper-content">
-                        <span class="paper-title">这里输入你的论文标题</span>
-                        <span class="paper-journal">发表/投稿期刊（预印本写Preprint）</span>
-                        <span class="paper-author">作者姓名</span>
-                        <p class="paper-desc">请简要描述这项工作的核心创新点和贡献（建议 2-3 句话）。</p>
+                        <span class="paper-title">A Foundational Generative Model for Cross-platform Unified Enhancement of Spatial Transcriptomics</span>
+                        <span class="paper-journal">Preprint</span>
+                        <span class="paper-author">Xiaofei Wang#, Hanyu Liu#, Ningfeng Que#, Chenyang Tao, Yu Jiang; Yixuan Jiang, Pinan Zhu, Junze Zhu, Xiaoyang Li, Stephen Price, Jianguo Xu, Jianzhong Xi*, Xinjie Wang*, Chao Li*.</span>
+                        <p class="paper-desc">This paper introduces FOCUS, a generative model that enhances spatial transcriptomics data by integrating multiple modalities like H&E images, scRNA-seq, and spatial co-expression priors.</p>
                         <div class="paper-links">
-                            <a href="doc/page_tissue/ur/placeholder.pdf" target="_blank">Paper</a> |
-                            <a href="https://github.com/..." target="_blank">Code</a>
+                            <a href="doc/page_tissue/ur/paper00..pdf" target="_blank">Paper</a> |
+                            <a href="https://github.com/LHY1007/FOCUS/" target="_blank">Code</a>
                         </div>
                     </div>
                 </li>
-
                 <li class="paper-item">
                     <img src="doc/page_tissue/ur/paper01.png" alt="Preview" class="paper-preview-img">
                     <div class="paper-content">
