--- a/page_tissue/index.html
+++ b/page_tissue/index.html
@@ -254,11 +254,12 @@
                         <span class="paper-author">Xiaofei Wang#, Hanyu Liu#, Ningfeng Que#, Chenyang Tao, Yu Jiang; Yixuan Jiang, Pinan Zhu, Junze Zhu, Xiaoyang Li, Stephen Price, Jianguo Xu, Jianzhong Xi*, Xinjie Wang*, Chao Li*.</span>
                         <p class="paper-desc">This paper introduces FOCUS, a generative model that enhances spatial transcriptomics data by integrating multiple modalities like H&E images, scRNA-seq, and spatial co-expression priors.</p>
                         <div class="paper-links">
-                            <a href="doc/page_tissue/ur/paper00..pdf" target="_blank">Paper</a> |
+                            <a href="doc/page_tissue/ur/paper00.pdf" target="_blank">Paper</a> |
                             <a href="https://github.com/LHY1007/FOCUS/" target="_blank">Code</a>
                         </div>
                     </div>
                 </li>
+                
                 <li class="paper-item">
                     <img src="doc/page_tissue/ur/paper01.png" alt="Preview" class="paper-preview-img">
                     <div class="paper-content">
