--- a/page_mri/index.html
+++ b/page_mri/index.html
@@ -341,7 +341,7 @@
                         <p class="paper-desc">请简要描述这项工作的核心创新点和贡献（建议 2-3 句话）。</p>
                         
                         <div class="paper-links">
-                            <a href="doc/[子页面关键词]/ur/你的论文.pdf" target="_blank">Paper</a> |
+                            <a href="doc/mri/p/综合实验大作业要求.pdf" target="_blank">Paper</a> |
                             <a href="https://github.com/..." target="_blank">Code</a>
                         </div>
                     </div>
