--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="pi-header">
                 <img src="doc/photo/chao_li.jpg" alt="Prof. Chao Li" class="pi-img">
                 <div class="pi-short-info">
-                    <h3>Prof. Chao Li</h3>
+                    <h3>Chao Li</h3>
                     <p class="pi-info-line">Professor</p>
                     <p class="pi-info-line" style="font-weight: normal;">Cambridge University, UK</p>
                     <div class="pi-links">
