--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
                 </div>
             </div>
             <div class="pi-bio">
-                <p>Prof. Li's research focuses on AI and Clinical Neuroscience, with extensive publications in top journals like Nature Communications and MICCAI.</p>
+                <p>Prof. Li's research focuses on AI and Clinical Neuroscience.</p>
             </div>
         </section>
     </div>
 
     <footer>
         <div class="page-container">
-            &copy; 2025 Intelligent Neuroimaging for Computational Neuroscience | University of Cambridge
+            &copy; 2025 Intelligent Neuroimaging for Computational Neuroscience | University of Cambridge/University of Dundee
         </div>
     </footer>
 </body>
