--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <footer>
         <div class="page-container">
-            &copy; 2025 Intelligent Neuroimaging for Computational Neuroscience | University of Cambridge/University of Dundee
+            &copy; 2025 Intelligent Neuroimaging for Computational Neuroscience | University of Cambridge, University of Dundee
         </div>
     </footer>
 </body>
